--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "chat-example",
-  "version": "0.0.0",
-  "description": "A chat example to showcase how to use `socket.io` with a static `express` server with `async` for control flow.",
-  "main": "server.js",
-  "repository": "",
-  "author": "Mostafa Eweda <mo.eweda@gmail.com>",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "body-parser": "^1.15.1",
-    "express": "~3.2.4",
-    "morgan": "^1.7.0",
-    "request": "^2.72.0"
-  }
+    "name": "chat-example",
+    "version": "1.0.0",
+    "description": "test chat bot app",
+    "main": "server.js",
+    "repository": {
+        "type": "git",
+        "url": ""
+    },
+    "scripts": {
+        "start": "node server.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "homepage": "",
+    "dependencies": {
+        "body-parser": "^1.15.1",
+        "express": "~3.2.4",
+        "morgan": "^1.7.0",
+        "request": "^2.72.0"
+    }
 }
